# mcphub-ollama-

./: .gitignore  PKGBUILD  README.md  pyproject.toml  run_app.py
assets/: mcp-central.desktop
mcp-client-for-ollama/: pyproject.toml
mcp-client-for-ollama/mcp_client_for_ollama/: central_config.py  central_utils.py  client.py
mcp-client-for-ollama/mcp_client_for_ollama.egg-info/: SOURCES.txt
mcp-client-for-ollama/mcp_client_for_ollama/server/: connector.py
mcp-client-for-ollama/mcp_client_for_ollama/utils/: streaming.py
mcp-client-for-ollama/ollmcp.egg-info/: PKG-INFO  SOURCES.txt
mcp-client-for-ollama/tests/: test_client.py
mcp_central/: __init__.py  chat_service.py  config.py  gui.py  tui.py  utils.py
mcp_central/chat_client/config/: manager.py
mcp_central/chat_client/server/: connector.py
mcp_central/chat_client/utils/: streaming.py
