[tool.poetry]
name = "mcp-central"
version = "1.0.0"
description = "A polished GUI for managing Smithery MCP servers and chatting with Ollama."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = {extras = ["dev"], version = "^0.67.0"}
keyring = "^25.3.0"
requests = "^2.32.3"
linkify-it-py = "^2.0.3"
mcp = "~1.12.4"
ollama = "~0.5.3"
prompt-toolkit = "~3.0.51"
rich = "~14.1.0"
typer = {extras = ["all"], version = "~0.16.0"}

[tool.poetry.scripts]
mcp-central = "mcp_central.tui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
